# duckdb-udf-rust-py

./: .gitignore  Cargo.toml  Makefile  README.md  example.py  pyproject.toml  requirements.txt  usage.py
src/: lib.rs
